homelab/apps/media/base/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: prowlarr
        image: lscr.io/linuxserver/prowlarr:1.24.3  
        ports:
        - containerPort: 9696
          name: http
          protocol: TCP
        volumeMounts:
        - mountPath: /config
          name: config
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: prowlarr-config
