homelab/apps/media/base/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
spec:
  ports:
  - port: 9696
